--- a/templates/material/new.html.twig
+++ b/templates/material/new.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
-	<h1>Créer une facture</h1>
+	<h1>Ajouter un nouveau matériau</h1>
 
 	{{ form_start(form) }}
 
