--- a/templates/material/edit.html.twig
+++ b/templates/material/edit.html.twig
@@ -9,6 +9,7 @@
 	<button>Enregistrer</button>
 
 	{{ form_end(form) }}
+	<a href="{{ path('delete_material', {'id': material.id}) }}" class="btn btn-danger btn-sm ml-1">Supprimer</a>
 	<h2>Ce matériau est utilisé pour</h2>
 	<ul>
 		{% for f in material.furniture %}
