Add functionnal edition of supplier

--- a/templates/supplier/index.html.twig
+++ b/templates/supplier/index.html.twig
@@ -8,4 +8,5 @@
             <li>{{ material.name }}</li>
         {% endfor %}
     </ul>
+    <a href="{{ path('supplier_edit', {id: supplier.id}) }}">Editer ce fournisseur</a>
 {% endblock %}
