Add index method to material controller + stylize buttons

--- a/templates/supplier/edit.html.twig
+++ b/templates/supplier/edit.html.twig
@@ -5,6 +5,6 @@
 
     {{ form_start(form) }}
     {{ form_widget(form) }}
-        <button>Enregistrer</button>
+        <button type="submit" class="btn btn-success">Enregistrer</button>
     {{ form_end(form) }}
 {% endblock %}
