--- a/templates/supplier/index.html.twig
+++ b/templates/supplier/index.html.twig
@@ -5,9 +5,9 @@
     <h2>Productions</h2>
     <ul>
         {% for material in supplier.materials %}
-            <li>{{ material.name }}</li>
+            <li><a href="{{ path('material', {id: material.id}) }}">{{ material.name }}</a></li>
         {% endfor %}
     </ul>
-    <a href="{{ path('supplier_edit', {id: supplier.id}) }}">Editer ce fournisseur</a>
-    <a href="{{ path('supplier_delete', {id: supplier.id}) }}">Supprimer ce fournisseur</a>
+    <a href="{{ path('supplier_edit', {id: supplier.id}) }}" class="btn btn-success">Editer</a>
+    <a href="{{ path('supplier_delete', {id: supplier.id}) }}" class="btn btn-danger">Supprimer</a>
 {% endblock %}
