--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,9 @@
 																																																						           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{#{{ encore_entry_link_tags('app') }}#}
+			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 			<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
+			
 		{% endblock %}
 
 		{% block javascripts %}
