--- a/templates/supplier/add.html.twig
+++ b/templates/supplier/add.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    Ajouter un fournisseur
+{% endblock %}
+
 {% block body %}
     <h1>Ajouter un fournisseur</h1>
 
