--- a/templates/supplier/index.html.twig
+++ b/templates/supplier/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}
+    Fournisseur - {{ supplier.name }}
+{% endblock %}
+
 {% block body %}
     <h1>{{ supplier.name }}</h1>
     <h2>Productions</h2>
