--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 	<h1>Liste des meubles existants</h1>
 
-	<button type="button" class="btn btn-secondary">Ajouter un nouveau meuble</button>
+	<a href="{{ path("furniture_add") }}" class="btn btn-secondary">Ajouter un nouveau meuble</a>
 
 	<div class="row">
 		<div class="col">
