--- a/templates/furniture/add.html.twig
+++ b/templates/furniture/add.html.twig
@@ -1,10 +1,13 @@
 {% extends 'base.html.twig' %}
+{% block title %}
+	Ajouter un nouveau meuble
+{% endblock %}
 
 {% block body %}
-    <h1>Ajouter un meuble</h1>
+	<h1>Ajouter un meuble</h1>
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-        <button>Enregistrer</button>
-    {{ form_end(form) }}
+	{{ form_start(form) }}
+	{{ form_widget(form) }}
+	<button class="btn btn-success">Enregistrer</button>
+	{{ form_end(form) }}
 {% endblock %}
