--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -7,7 +7,7 @@
 
 	{{ form_widget(form) }}
 
-	<button>Enregistrer</button>
+	<button class="btn btn-success mt-2">Enregistrer</button>
 
 	{{ form_end(form) }}
 {% endblock %}
