--- a/templates/supplier/add.html.twig
+++ b/templates/supplier/add.html.twig
@@ -1,14 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Ajouter un fournisseur
+	Ajouter un fournisseur
 {% endblock %}
 
 {% block body %}
-    <h1>Ajouter un fournisseur</h1>
+	<h1>Ajouter un fournisseur</h1>
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-        <button>Enregistrer</button>
-    {{ form_end(form) }}
+	{{ form_start(form) }}
+	{{ form_widget(form) }}
+	<button class="btn btn-success">Enregistrer</button>
+	{{ form_end(form) }}
 {% endblock %}
