--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,12 +7,12 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																								           and uncomment the following Encore helpers to start using Symfony UX #}
+																																																												           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			{#{{ encore_entry_link_tags('app') }}#}
 			<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
 			<link rel="stylesheet" href="https://bootswatch.com/5/sandstone/bootstrap.min.css">
-			
+
 		{% endblock %}
 
 		{% block javascripts %}
@@ -23,6 +23,7 @@
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
 			<div class="container">
 				<a class="navbar-brand" href="{{ path('home') }}">Accueil</a>
+				<a class="navbar-brand" href="{{ path('category_list') }}">Catégories</a>
 				<a class="btn btn-outline-danger">Déconnexion</a>
 			</div>
 		</nav>
