added material list link on the material page

--- a/templates/material/index.html.twig
+++ b/templates/material/index.html.twig
@@ -1,18 +1,25 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>{{ material.name }}</h1>
-    <p>{{ material.description }}</p>
-    <h2>Fournis par :</h2>
-    <a href="{{ path('supplier', {id: material.supplier.id}) }}" class="btn btn-warning">{{ material.supplier.name }}</a>
-    <br>
-    <h2>Ce matériau est inclus dans :</h2>
-    <ul>
-    {% for furniture in material.furniture %}
-        <li><a href="{{ path('furniture', {id: furniture.id}) }}" class="btn btn-primary">{{ furniture.name }}</a></li>
-    {% endfor %}
-    </ul>
-    <hr>
-    <a href="{{ path('edit_material', {id: material.id}) }}" class="btn btn-success">Editer</a>
-    <a href="{{ path('delete_material', {id: material.id}) }}" class="btn btn-danger">Supprimer</a>
+	<ul class="nav nav-pills">
+		<li class="nav-item">
+			<a class="nav-link" href="{{ path('material_list') }}">Retour à la liste des matériaux</a>
+		</li>
+	</ul>
+	<h1>{{ material.name }}</h1>
+	<p>{{ material.description }}</p>
+	<h2>Fournis par :</h2>
+	<a href="{{ path('supplier', {id: material.supplier.id}) }}" class="btn btn-warning">{{ material.supplier.name }}</a>
+	<br>
+	<h2>Ce matériau est inclus dans :</h2>
+	<ul>
+		{% for furniture in material.furniture %}
+			<li>
+				<a href="{{ path('furniture', {id: furniture.id}) }}" class="btn btn-primary">{{ furniture.name }}</a>
+			</li>
+		{% endfor %}
+	</ul>
+	<hr>
+	<a href="{{ path('edit_material', {id: material.id}) }}" class="btn btn-success">Editer</a>
+	<a href="{{ path('delete_material', {id: material.id}) }}" class="btn btn-danger">Supprimer</a>
 {% endblock %}
