--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -6,7 +6,7 @@
 {% block body %}
 	<ul class="nav nav-pills">
 		<li class="nav-item">
-			<a class="nav-link" href="#">Retour à la liste des catégories</a>
+			<a class="nav-link" href="{{ path('category_list') }}">Retour à la liste des catégories</a>
 		</li>
 	</ul>
 	<h1>{{ category.name }}</h1>
