--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,15 +20,17 @@
 		{% endblock %}
 	</head>
 	<body>
+	{% if app.user %}
 		<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
 			<div class="container">
 				<a class="navbar-brand" href="{{ path('home') }}">Accueil</a>
 				<a class="navbar-brand" href="{{ path('category_list') }}">Catégories</a>
 				<a class="navbar-brand" href="{{ path('material_list') }}">Matériaux</a>
 				<a class="navbar-brand" href="{{ path('supplier_list') }}">Fournisseurs</a>
-				<a class="btn btn-outline-danger">Déconnexion</a>
+				<a class="btn btn-outline-danger" href="{{ path('app_logout') }}">Déconnexion</a>
 			</div>
 		</nav>
+	{% endif %}
 		<div class="container"> {% block body %}{% endblock %}
 			</div>
 		</body>
